--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <title>Document</title>
 </head>
@@ -16,11 +17,13 @@
             <thead>
                 <tr>
                     <th>Todo</th>
+                    <th>Actions</th>
                 </tr>
             </thead>
             <tbody>
                 <tr v-for="todo in todos" :key="todo">
-                    <td>{{ todo }}</td>
+                    <td>{{ todo }} </td>
+                    <td><button @click="deleteTodo(todo)"> Delete</td>                   
                 </tr>
             </tbody>
         </table>
