--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <title>Document</title>
 </head>
@@ -23,7 +23,7 @@
             <tbody>
                 <tr v-for="todo in todos" :key="todo">
                     <td>{{ todo }} </td>
-                    <td><button @click="deleteTodo(todo)"> Delete</td>                   
+                    <td><button @click="deleteTodo(todo)"><i class="fa fa-trash"></i></td>                   
                 </tr>
             </tbody>
         </table>
